# SpectraControl_App

./: .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.sh  pyproject.toml  run.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: audit.yml  codeql.yml  release.yml  tests.yml
backend/: brightness.go  brightness_test.go  entertainment.go  entertainment_test.go  events.go  events_test.go  go.mod  go.sum  logger.go  main.go  main.py  scenes.go  scenes_test.go  update.go
backend/scenes/: northern-lights.json  savanna-sunset.json  tropical-twilight.json
docs/: CNAME  Cloud2Cloud Getting Started - developers.meethue.com.md  Hue API V2 - developers.meethue.com.md  architecture.md  hue-api-v2.md  index.html  release-keys.md  smoke-test-beta.md  styles.css  troubleshooting.en.md  troubleshooting.es.md
docs/manual_hue/: Core Concepts - developers.meethue.com.md  Getting started - developers.meethue.com.md  Migration Guide to the new Hue API - developers.meethue.com.md
frontend/: index.html
frontend/i18n/: en.json  es.json
packaging/flatpak/: .gitignore  README.md  casa.scode.SpectraControl.desktop  casa.scode.SpectraControl.metainfo.xml  casa.scode.SpectraControl.yml  generate-sources.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  main.rs  notifications.rs  runtime.rs
