[package]
name = "spectra-control"
version = "0.2.15"
edition = "2021"
license = "MIT"
authors = ["Sebas Contreras <swf.sebas@gmail.com>"]
description = "Linux desktop app for Philips Hue, with screen-to-light sync over Hue Entertainment API v2."
homepage = "https://sebascode.github.io/SpectraControl_App/"
repository = "https://github.com/sebascode/SpectraControl_App"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
rustfft = "6"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_28"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
